--- a/src/app/components/sections/category-list/category-list.component.html
+++ b/src/app/components/sections/category-list/category-list.component.html
@@ -1,10 +1,12 @@
-<h1 class="category-header">Most Demanding Categories.</h1>
+<div class="d-flex justify-content-between px-lg-5">
+  <h1 class="category-header">Most Demanding Categories.</h1>
+  <span class="explore-all text-center d-none d-lg-block">
+    <a class="btn" href="">Explore all fields > </a>
+  </span>
+</div>
 
 <div class="d-flex flex-wrap justify-content-center gap-3">
-  <div
-    class="category-card-wrapper"
-    *ngFor="let category of categories"
-  >
+  <div class="category-card-wrapper" *ngFor="let category of categories">
     <div class="category-card text-center">
       <div class="icon">
         <svg
