feat: Enhance styling and layout for CTA, Find Talents, Footer, and Q&A sections with responsive design improvements

--- a/src/app/components/sections/cta/cta.component.html
+++ b/src/app/components/sections/cta/cta.component.html
@@ -1,13 +1,14 @@
- <div class="userSetup-wrapper">
-    <hr />
-    <h1>Most complete job portal.</h1>
-    <p>Signup and start find your job and talents.</p>
-
-    <div
-      class="userSetup-btns d-flex flex-row flex-lg-row gap-4 justify-content-center"
-    >
+<div class="userSetup-wrapper">
+  <hr />
+  <div class="userSetup-content">
+    <div class="userSetup-text">
+      <h1>Most complete job portal.</h1>
+      <p>Signup and start find your job or talents.</p>
+    </div>
+    <div class="userSetup-btns">
       <button class="btn1">Looking for job?</button>
       <button class="btn2">Post a job</button>
     </div>
-    <hr />
   </div>
+  <hr />
+</div>
