--- a/src/app/components/sections/findtalents/findtalents.component.html
+++ b/src/app/components/sections/findtalents/findtalents.component.html
@@ -1,5 +1,6 @@
 <div class="talents">
-  <p>Looking for an expert?</p>
+<div>
+    <p>Looking for an expert?</p>
 
   <h1 class="header">Find top talents from JobNet.</h1>
 
@@ -56,8 +57,10 @@
   </div>
 
   <button class="talent-btn">Find Talents</button>
-  <div>
-    <img src="/assets/shape-1.svg" width="55" height="55" class="mt-4 ms-5" />
+</div>
+
+  <div class="position-relative mt-3">
+    <img src="/assets/shape-1.svg" width="55" height="55" class="position-absolute top-0 end-50 m-2" />
 
     <div class="talent-imgs row align-items-center">
       <div class="col-6">
@@ -65,7 +68,15 @@
       </div>
       <div class="col-6">
         <img src="/assets/img_8.jpg" class="w-100 h-auto mb-4" loading="lazy" />
-        <img src="/assets/img_9.jpg" class="w-100 h-auto" loading="lazy" />
+        <div class="position-relative">
+          <img src="/assets/img_9.jpg" class="h-auto w-100" loading="lazy" />
+          <img
+            src="/assets/shape-2.svg"
+            width="55"
+            height="55"
+            class="position-absolute top-50 end-0 end-lg-50"
+          />
+        </div>
       </div>
     </div>
   </div>
