--- a/src/app/components/sections/q-a/q-a.component.html
+++ b/src/app/components/sections/q-a/q-a.component.html
@@ -1,6 +1,5 @@
 <div class="QandA-wrapper">
   <h1 class="header">Questions & Answers</h1>
-
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
@@ -13,6 +12,7 @@
           aria-controls="collapseOne"
         >
           How does the free trial work?
+          <span class="toggle-icon"></span>
         </button>
       </h2>
       <div
@@ -38,6 +38,7 @@
           aria-controls="collapseTwo"
         >
           How do you find different criteria in your process?
+          <span class="toggle-icon"></span>
         </button>
       </h2>
       <div
@@ -63,6 +64,7 @@
           aria-controls="collapseThree"
         >
           What do you look for in a founding team?
+          <span class="toggle-icon"></span>
         </button>
       </h2>
       <div
@@ -77,7 +79,6 @@
         </div>
       </div>
     </div>
-
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button
@@ -89,6 +90,7 @@
           aria-controls="collapseFour"
         >
           Do you recommend Pay as you go or Pre pay?
+          <span class="toggle-icon"></span>
         </button>
       </h2>
       <div
@@ -103,7 +105,6 @@
         </div>
       </div>
     </div>
-
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button
@@ -115,6 +116,7 @@
           aria-controls="collapseFive"
         >
           What do I get for $0 with my plan?
+          <span class="toggle-icon"></span>
         </button>
       </h2>
       <div
@@ -130,9 +132,7 @@
       </div>
     </div>
   </div>
-
   <div class="customer-support">
-    <div>Don't find the answer? <span>We can help.</span></div>
-    <a href="">Click Here</a>
+    <div>Don't find the answer? <span>We can help.</span> <a href="">Click here</a></div>
   </div>
 </div>
