--- a/src/app/components/sections/footer/footer.component.html
+++ b/src/app/components/sections/footer/footer.component.html
@@ -7,7 +7,6 @@
         <img src="/assets/shape-2.svg" alt="" width="55" height="55" />
       </div>
     </div>
-
     <div class="footer-category-container d-flex flex-column flex-lg-row gap-5">
       <div class="footer-category">
         <h1>Services</h1>
@@ -18,7 +17,6 @@
           <p><a href="">Pricing</a></p>
         </div>
       </div>
-
       <div class="footer-category">
         <h1>Company</h1>
         <div class="footer-category-links">
@@ -28,7 +26,6 @@
           <p><a href="">Contact</a></p>
         </div>
       </div>
-
       <div class="footer-category">
         <h1>Support</h1>
         <div class="footer-category-links">
@@ -41,24 +38,48 @@
     </div>
   </div>
 
+  <!-- Footer Bottom Section -->
   <div
     class="footer-end d-flex align-items-center justify-content-center text-center"
   >
-    <div>
+    <!-- Mobile & Tablet Layout (576px - 991px) -->
+    <div class="d-lg-none">
       <div class="socials-wrapper d-flex flex-row gap-2 justify-content-center">
         <i class="fa-brands fa-whatsapp"></i>
         <i class="fa-solid fa-basketball"></i>
         <i class="fa-brands fa-google"></i>
         <i class="fa-brands fa-instagram"></i>
       </div>
-
       <div class="other-links-wrapper d-flex flex-row gap-3 mt-4">
         <p>Privacy & Terms.</p>
         <p>Contact Us</p>
       </div>
-
       <div class="copyright mt-1">
         <p>Copyright &#64;2025 JobNet inc.</p>
+      </div>
+    </div>
+
+    <!-- Desktop Layout (992px+) -->
+    <div
+      class="d-none d-lg-flex w-100 justify-content-between align-items-center"
+    >
+      <!-- Left Side: Links + Copyright -->
+      <div class="d-flex align-items-center gap-4">
+        <div class="other-links-wrapper d-flex flex-row gap-3">
+          <p>Privacy & Terms.</p>
+          <p>Contact Us</p>
+        </div>
+        <div class="copyright">
+          <p>Copyright &#64;2025 JobNet inc.</p>
+        </div>
+      </div>
+
+      <!-- Right Side: Social Icons -->
+      <div class="socials-wrapper d-flex flex-row gap-2">
+        <i class="fa-brands fa-whatsapp"></i>
+        <i class="fa-solid fa-basketball"></i>
+        <i class="fa-brands fa-google"></i>
+        <i class="fa-brands fa-instagram"></i>
       </div>
     </div>
   </div>
