--- a/src/app/components/sections/navbar/navbar.component.html
+++ b/src/app/components/sections/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-transparent sticky-top w-100">
+<nav class="navbar navbar-expand-lg bg-transparent sticky-top">
   <div class="container-fluid">
     <div class="d-flex justify-content-between align-items-center w-100">
       <!-- Brand -->
