--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,11 +1,12 @@
-.home{
-  max-width: 1600px;
+.home {
+  /* max-width: 1600px; */
   margin: 0 auto;
+  width: 100%;
+  max-width: none;
 }
 .body {
   padding: 4rem 0.8rem 2rem;
 }
-
 
 /* CSS utility class (for basic reusability) */
 /* .btn {
@@ -23,4 +24,3 @@
   background-color: #6c757d;
   color: white;
 } */
-
