--- a/src/app/components/sections/profile/profile.component.html
+++ b/src/app/components/sections/profile/profile.component.html
@@ -1,6 +1,6 @@
 <!-- profile.component.html -->
 <div class="container py-4">
-<h5 class="card-title fw-bold">Profile</h5>
+<h5 class="card-title fw-bold">My Profile</h5>
   <form>
     <!-- Profile Card -->
     <div class="card mb-4">
